--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,3 +1,81 @@
 ---
-- include_tasks: "{{ role_path }}/tasks/setup.yml"
-  when: "app_mylar3_enabled|bool"
+- name: set vars
+  set_fact:
+    docker_image: '{{ role_mylar3_image }}'
+    docker_container: '{{ role_mylar3_container }}'
+    docker_puid: '{{ role_mylar3_puid }}'
+    docker_pgid: '{{ role_mylar3_pgid }}'
+    docker_tz: '{{ role_mylar3_tz }}'
+    docker_dir_config: '{{ role_mylar3_dir }}/config'
+    docker_dir_comics: '{{ role_mylar3_dir }}/comics'
+    docker_dir_downloads: '{{ role_mylar3_dir }}/downloads'
+    docker_network: '{{ role_mylar3_network }}'
+
+- name: Create config directory
+  ansible.builtin.file:
+    path: '{{ docker_dir_config }}'
+    state: directory
+    owner: '{{ docker_puid }}'
+    group: '{{ docker_pgid }}'
+    mode: 0755
+
+- name: Create comics directory
+  ansible.builtin.file:
+    path: '{{ docker_dir_comics }}'
+    state: directory
+    owner: '{{ docker_puid }}'
+    group: '{{ docker_pgid }}'
+    mode: 0755
+
+- name: Create downloads directory
+  ansible.builtin.file:
+    path: '{{ docker_dir_downloads }}'
+    state: directory
+    owner: '{{ docker_puid }}'
+    group: '{{ docker_pgid }}'
+    mode: 0755
+
+- name: Ensure image is pulled
+  community.docker.docker_image:
+    name: "{{ docker_image }}"
+    source: pull
+    force_source: yes
+  register: pulled
+
+- name: Remove container
+  community.docker.docker_container:
+    name: "{{ docker_container }}"
+    state: absent
+  when: pulled.changed
+
+- name: Get infos on container
+  community.docker.docker_container_info:
+    name: "{{ docker_container }}"
+  register: result
+
+- name: Create network
+  community.docker.docker_network:
+    name: "{{ docker_network }}"
+    driver_options:
+          com.docker.network.bridge.name: "br-{{ docker_network }}"
+
+- name: Create mylar3 container
+  community.docker.docker_container:
+    image: '{{ docker_image }}'
+    volumes:
+     - '{{ docker_dir_config }}:/config:Z'
+     - '{{ docker_dir_comics }}:/comics:Z'
+     - '{{ docker_dir_downloads }}:/downloads:Z'
+    env:
+      PUID: '{{ docker_puid }}'
+      PGID: '{{ docker_pgid }}'
+      TZ: '{{ docker_tz }}'
+    name: "{{ docker_container }}"
+    networks:
+     - name: "{{ docker_network }}"
+    restart_policy: unless-stopped
+    state: started
+  when:
+    pulled.changed
+    or
+    result.exists == false
